# 2020vol1-backend

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  app.yaml
.github/workflows/: main.yml
src/: api.rs  db.rs  main.rs  model.rs
src/api/: handler.rs  router.rs  routes.rs
src/api/handler/: classes.rs
src/api/router/: classes.rs
src/api/routes/: by_pass.rs  class.rs  classes.rs  resource.rs  resources.rs
src/db/: mem.rs  mongo.rs
