[package]
name = "hacku_2020_frontend"
version = "0.1.0"
authors = ["ProvinDevs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
warp = "0.2.4"
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
google-storage1 = "1.0.14"
dotenv = "0.15.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = { version = "0.4.15", features = ["serde"] }
async-trait = "0.1.37"
thiserror = "1.0.20"
rand = "0.7.3"
